2022-11-30  Jacob Bachmeyer  <jcb@gnu.org>

	* dejagnu.h (DG__status): New struct for test counters.
	(passed, failed, xpassed, xfailed, untest, unresolve, unsupport):
	Move all counters into new struct, changing all functions.

	* doc/dejagnu.texi (C unit testing API): Document use of "DG_"
	prefix in dejagnu.h and "DG__" for internal symbols.
	(C++ unit testing API): Likewise.  Also declare namespace
	"DejaGnu" reserved for future expansion.

2022-11-29  Jacob Bachmeyer  <jcb@gnu.org>

	* Makefile.in: Regenerate.
	* Makefile.am (check_PROGRAMS): Add testsuite/libdejagnu/unit-ccxxmix.
	(testsuite_libdejagnu_unit_ccxxmix_SOURCES): Add.
	* testsuite/libdejagnu/unit.exp: Add tests for C/C++ mixed usage.
	* testsuite/libdejagnu/unit-ccxxmix.cxx: New file.

	* testsuite/libdejagnu/unit.exp: Add note that tests for the
	framework side of the unit testing protocol are located in
	testsuite/runtest.main/stats.exp and its nested testsuite.

	* Makefile.in: Regenerate.
	* Makefile.am (check_PROGRAMS): Remove unit.
	(unit_SOURCES): Remove.
	* testsuite/libdejagnu/tunit.exp: Remove file.
	* testsuite/libdejagnu/unit.cc: Remove file.
	The limited coverage of this test is now included in unit.exp
	and unit-cxx, and supporting this test required some leaky
	abstractions in dejagnu.h that can now be cleaned up.

	* Makefile.in: Regenerate.
	* Makefile.am (check_PROGRAMS): Add testsuite/libdejagnu/unit-cxx.
	(testsuite_libdejagnu_unit_cxx_SOURCES): Add.
	* testsuite/libdejagnu/unit.exp: Add tests for C++ unit test API.
	* testsuite/libdejagnu/unit-cxx.cxx: New file.

	* dejagnu.h (TestState::totals): Emit header line, like the C version.

	* dejagnu.h (TestState::note): New method, like C note().
	* doc/dejagnu.texi (C++ unit testing API): Add note() method.

	* doc/dejagnu.texi (C++ unit testing API): Fix incorrect
	documentation.  The C and C++ interfaces share the same global
	counters, as do all C++ TestState objects.

2022-11-28  Jacob Bachmeyer  <jcb@gnu.org>
